welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: pattern definition may not be abstract
	var vuBiscuit():Boolean:Int == false
                     ^